--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Friendly Chat",
-  "short_name": "Friendly Chat",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "orientation": "portrait"
+    "name": "KZHWEB for ERP",
+    "short_name": "KZHWEB",
+    "start_url": "/index.html",
+    "display": "standalone",
+    "orientation": "portrait"
 }
