--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.1",
-    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.2",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
@@ -34,6 +34,7 @@
     "ng2-smart-table": "^1.2.1",
     "ng2-table": "^1.3.2",
     "ngx-cookie": "^1.0.0",
+    "primeng": "^4.1.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
