--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-moment": "^1.7.0",
     "angularfire2": "^4.0.0-rc.1",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
@@ -30,7 +31,8 @@
     "firebase": "^4.1.2",
     "ng2-auto-complete": "^0.12.0",
     "ng2-charts": "^1.6.0",
-    "ng2-completer": "^1.6.0",
+    "ng2-completer": "^1.6.3",
+    "ng2-material-dropdown": "^0.7.10",
     "ng2-smart-table": "^1.2.1",
     "ng2-table": "^1.3.2",
     "ngx-cookie": "^1.0.0",
